expr_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENTS
    INT_CONST_16
    INT_CONST_8

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_decl
Rule 2     translation_unit -> translation_unit external_decl
Rule 3     external_decl -> funcdef
Rule 4     external_decl -> declstmt
Rule 5     statement_list -> statement
Rule 6     statement_list -> statement statement_list
Rule 7     statement -> assignment_statement
Rule 8     statement -> declstmt
Rule 9     statement -> while_statement
Rule 10    statement -> funccall_stmt
Rule 11    statement -> jump_statement
Rule 12    statement -> selection_statement
Rule 13    typedecl -> type cast_expr
Rule 14    typedecl -> type cast_expr EQUALS expression
Rule 15    arraydecl -> type varsymbol LBRACKET INT_CONST RBRACKET EQUALS expression
Rule 16    arraydecl -> type varsymbol LBRACKET INT_CONST RBRACKET
Rule 17    funcdecl -> storage type methodsymbol LPAREN param_list RPAREN
Rule 18    funcdecl -> type methodsymbol LPAREN param_list RPAREN
Rule 19    pointer -> TIMES
Rule 20    pointer -> pointer TIMES
Rule 21    storage -> EXTERN
Rule 22    storage -> STATIC
Rule 23    type -> basetype pointer
Rule 24    type -> basetype
Rule 25    declaration -> typedecl
Rule 26    declaration -> arraydecl
Rule 27    declaration -> funcdecl
Rule 28    declstmt -> declaration SEMI
Rule 29    compound_statement -> LBRACE statement_list RBRACE
Rule 30    while_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 31    if_statement1 -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 32    if_statement2 -> IF LPAREN expression RPAREN compound_statement
Rule 33    selection_statement -> if_statement1
Rule 34    selection_statement -> if_statement2
Rule 35    break_statement -> BREAK SEMI
Rule 36    continue_statement -> CONTINUE SEMI
Rule 37    jump_statement -> return_statement
Rule 38    jump_statement -> continue_statement
Rule 39    jump_statement -> break_statement
Rule 40    return_statement -> RETURN expression SEMI
Rule 41    return_statement -> RETURN SEMI
Rule 42    assignment_statement -> assignment_expr SEMI
Rule 43    assignment_expr -> cast_expr EQUALS expression
Rule 44    expression -> binary_expr
Rule 45    expression -> funccall_expr
Rule 46    cast_expr -> unary_expr
Rule 47    cast_expr -> primary_expr
Rule 48    primary_expr -> varsymbol
Rule 49    primary_expr -> constant
Rule 50    unary_op -> BAND
Rule 51    unary_op -> TIMES
Rule 52    unary_expr -> unary_op primary_expr
Rule 53    binary_expr -> binary_expr PLUS binary_expr
Rule 54    binary_expr -> binary_expr MINUS binary_expr
Rule 55    binary_expr -> binary_expr TIMES binary_expr
Rule 56    binary_expr -> binary_expr DIVIDES binary_expr
Rule 57    binary_expr -> binary_expr GT binary_expr
Rule 58    binary_expr -> binary_expr LT binary_expr
Rule 59    binary_expr -> binary_expr LE binary_expr
Rule 60    binary_expr -> binary_expr GE binary_expr
Rule 61    binary_expr -> binary_expr EQ binary_expr
Rule 62    binary_expr -> binary_expr NE binary_expr
Rule 63    binary_expr -> binary_expr LAND binary_expr
Rule 64    binary_expr -> binary_expr LOR binary_expr
Rule 65    binary_expr -> LPAREN binary_expr RPAREN
Rule 66    binary_expr -> cast_expr
Rule 67    binary_expr -> funccall_expr
Rule 68    param -> type varsymbol
Rule 69    param_list -> param
Rule 70    param_list -> param COMMA param_list
Rule 71    param_list -> VOID
Rule 72    argument -> varsymbol
Rule 73    argument -> constant
Rule 74    argument_list -> argument
Rule 75    argument_list -> argument COMMA argument_list
Rule 76    funcdef -> type methodsymbol LPAREN param_list RPAREN compound_statement
Rule 77    funcdef -> type methodsymbol LPAREN RPAREN compound_statement
Rule 78    funccall_expr -> methodsymbol LPAREN argument_list RPAREN
Rule 79    funccall_expr -> methodsymbol LPAREN RPAREN
Rule 80    funccall_stmt -> funccall_expr SEMI
Rule 81    basetype -> INT
Rule 82    basetype -> CHAR
Rule 83    basetype -> FLOAT
Rule 84    basetype -> VOID
Rule 85    methodsymbol -> ID
Rule 86    varsymbol -> ID
Rule 87    constant -> INT_CONST
Rule 88    constant -> CHAR_CONST
Rule 89    constant -> FLOAT_CONST
Rule 90    constant -> NORMALSTRING

Terminals, with rules where they appear

BAND                 : 50
BREAK                : 35
CHAR                 : 82
CHAR_CONST           : 88
COMMA                : 70 75
COMMENTS             : 
CONTINUE             : 36
DIVIDES              : 56
ELSE                 : 31
EQ                   : 61
EQUALS               : 14 15 43
EXTERN               : 21
FLOAT                : 83
FLOAT_CONST          : 89
GE                   : 60
GT                   : 57
ID                   : 85 86
IF                   : 31 32
INT                  : 81
INT_CONST            : 15 16 87
INT_CONST_16         : 
INT_CONST_8          : 
LAND                 : 63
LBRACE               : 29
LBRACKET             : 15 16
LE                   : 59
LOR                  : 64
LPAREN               : 17 18 30 31 32 65 76 77 78 79
LT                   : 58
MINUS                : 54
NE                   : 62
NORMALSTRING         : 90
PLUS                 : 53
RBRACE               : 29
RBRACKET             : 15 16
RETURN               : 40 41
RPAREN               : 17 18 30 31 32 65 76 77 78 79
SEMI                 : 28 35 36 40 41 42 80
STATIC               : 22
TIMES                : 19 20 51 55
VOID                 : 71 84
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

argument             : 74 75
argument_list        : 75 78
arraydecl            : 26
assignment_expr      : 42
assignment_statement : 7
basetype             : 23 24
binary_expr          : 44 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65
break_statement      : 39
cast_expr            : 13 14 43 66
compound_statement   : 30 31 31 32 76 77
constant             : 49 73
continue_statement   : 38
declaration          : 28
declstmt             : 4 8
expression           : 14 15 30 31 32 40 43
external_decl        : 1 2
funccall_expr        : 45 67 80
funccall_stmt        : 10
funcdecl             : 27
funcdef              : 3
if_statement1        : 33
if_statement2        : 34
jump_statement       : 11
methodsymbol         : 17 18 76 77 78 79
param                : 69 70
param_list           : 17 18 70 76
pointer              : 20 23
primary_expr         : 47 52
return_statement     : 37
selection_statement  : 12
statement            : 5 6
statement_list       : 6 29
storage              : 17
translation_unit     : 2 0
type                 : 13 14 15 16 17 18 68 76 77
typedecl             : 25
unary_expr           : 46
unary_op             : 52
varsymbol            : 15 16 48 68 72
while_statement      : 9

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_decl
    (2) translation_unit -> . translation_unit external_decl
    (3) external_decl -> . funcdef
    (4) external_decl -> . declstmt
    (76) funcdef -> . type methodsymbol LPAREN param_list RPAREN compound_statement
    (77) funcdef -> . type methodsymbol LPAREN RPAREN compound_statement
    (28) declstmt -> . declaration SEMI
    (23) type -> . basetype pointer
    (24) type -> . basetype
    (25) declaration -> . typedecl
    (26) declaration -> . arraydecl
    (27) declaration -> . funcdecl
    (81) basetype -> . INT
    (82) basetype -> . CHAR
    (83) basetype -> . FLOAT
    (84) basetype -> . VOID
    (13) typedecl -> . type cast_expr
    (14) typedecl -> . type cast_expr EQUALS expression
    (15) arraydecl -> . type varsymbol LBRACKET INT_CONST RBRACKET EQUALS expression
    (16) arraydecl -> . type varsymbol LBRACKET INT_CONST RBRACKET
    (17) funcdecl -> . storage type methodsymbol LPAREN param_list RPAREN
    (18) funcdecl -> . type methodsymbol LPAREN param_list RPAREN
    (21) storage -> . EXTERN
    (22) storage -> . STATIC

    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14
    EXTERN          shift and go to state 16
    STATIC          shift and go to state 17

    translation_unit               shift and go to state 1
    external_decl                  shift and go to state 2
    funcdef                        shift and go to state 3
    declstmt                       shift and go to state 4
    type                           shift and go to state 5
    declaration                    shift and go to state 6
    basetype                       shift and go to state 7
    typedecl                       shift and go to state 8
    arraydecl                      shift and go to state 9
    funcdecl                       shift and go to state 10
    storage                        shift and go to state 15

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_decl
    (3) external_decl -> . funcdef
    (4) external_decl -> . declstmt
    (76) funcdef -> . type methodsymbol LPAREN param_list RPAREN compound_statement
    (77) funcdef -> . type methodsymbol LPAREN RPAREN compound_statement
    (28) declstmt -> . declaration SEMI
    (23) type -> . basetype pointer
    (24) type -> . basetype
    (25) declaration -> . typedecl
    (26) declaration -> . arraydecl
    (27) declaration -> . funcdecl
    (81) basetype -> . INT
    (82) basetype -> . CHAR
    (83) basetype -> . FLOAT
    (84) basetype -> . VOID
    (13) typedecl -> . type cast_expr
    (14) typedecl -> . type cast_expr EQUALS expression
    (15) arraydecl -> . type varsymbol LBRACKET INT_CONST RBRACKET EQUALS expression
    (16) arraydecl -> . type varsymbol LBRACKET INT_CONST RBRACKET
    (17) funcdecl -> . storage type methodsymbol LPAREN param_list RPAREN
    (18) funcdecl -> . type methodsymbol LPAREN param_list RPAREN
    (21) storage -> . EXTERN
    (22) storage -> . STATIC

    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14
    EXTERN          shift and go to state 16
    STATIC          shift and go to state 17

    external_decl                  shift and go to state 18
    funcdef                        shift and go to state 3
    declstmt                       shift and go to state 4
    type                           shift and go to state 5
    declaration                    shift and go to state 6
    basetype                       shift and go to state 7
    typedecl                       shift and go to state 8
    arraydecl                      shift and go to state 9
    funcdecl                       shift and go to state 10
    storage                        shift and go to state 15

state 2

    (1) translation_unit -> external_decl .

    INT             reduce using rule 1 (translation_unit -> external_decl .)
    CHAR            reduce using rule 1 (translation_unit -> external_decl .)
    FLOAT           reduce using rule 1 (translation_unit -> external_decl .)
    VOID            reduce using rule 1 (translation_unit -> external_decl .)
    EXTERN          reduce using rule 1 (translation_unit -> external_decl .)
    STATIC          reduce using rule 1 (translation_unit -> external_decl .)
    $end            reduce using rule 1 (translation_unit -> external_decl .)


state 3

    (3) external_decl -> funcdef .

    INT             reduce using rule 3 (external_decl -> funcdef .)
    CHAR            reduce using rule 3 (external_decl -> funcdef .)
    FLOAT           reduce using rule 3 (external_decl -> funcdef .)
    VOID            reduce using rule 3 (external_decl -> funcdef .)
    EXTERN          reduce using rule 3 (external_decl -> funcdef .)
    STATIC          reduce using rule 3 (external_decl -> funcdef .)
    $end            reduce using rule 3 (external_decl -> funcdef .)


state 4

    (4) external_decl -> declstmt .

    INT             reduce using rule 4 (external_decl -> declstmt .)
    CHAR            reduce using rule 4 (external_decl -> declstmt .)
    FLOAT           reduce using rule 4 (external_decl -> declstmt .)
    VOID            reduce using rule 4 (external_decl -> declstmt .)
    EXTERN          reduce using rule 4 (external_decl -> declstmt .)
    STATIC          reduce using rule 4 (external_decl -> declstmt .)
    $end            reduce using rule 4 (external_decl -> declstmt .)


state 5

    (76) funcdef -> type . methodsymbol LPAREN param_list RPAREN compound_statement
    (77) funcdef -> type . methodsymbol LPAREN RPAREN compound_statement
    (13) typedecl -> type . cast_expr
    (14) typedecl -> type . cast_expr EQUALS expression
    (15) arraydecl -> type . varsymbol LBRACKET INT_CONST RBRACKET EQUALS expression
    (16) arraydecl -> type . varsymbol LBRACKET INT_CONST RBRACKET
    (18) funcdecl -> type . methodsymbol LPAREN param_list RPAREN
    (85) methodsymbol -> . ID
    (46) cast_expr -> . unary_expr
    (47) cast_expr -> . primary_expr
    (86) varsymbol -> . ID
    (52) unary_expr -> . unary_op primary_expr
    (48) primary_expr -> . varsymbol
    (49) primary_expr -> . constant
    (50) unary_op -> . BAND
    (51) unary_op -> . TIMES
    (87) constant -> . INT_CONST
    (88) constant -> . CHAR_CONST
    (89) constant -> . FLOAT_CONST
    (90) constant -> . NORMALSTRING

    ID              shift and go to state 23
    BAND            shift and go to state 28
    TIMES           shift and go to state 29
    INT_CONST       shift and go to state 22
    CHAR_CONST      shift and go to state 30
    FLOAT_CONST     shift and go to state 31
    NORMALSTRING    shift and go to state 32

    methodsymbol                   shift and go to state 19
    cast_expr                      shift and go to state 20
    varsymbol                      shift and go to state 21
    unary_expr                     shift and go to state 24
    primary_expr                   shift and go to state 25
    unary_op                       shift and go to state 26
    constant                       shift and go to state 27

state 6

    (28) declstmt -> declaration . SEMI

    SEMI            shift and go to state 33


state 7

    (23) type -> basetype . pointer
    (24) type -> basetype .
    (19) pointer -> . TIMES
    (20) pointer -> . pointer TIMES

  ! shift/reduce conflict for TIMES resolved as shift
    ID              reduce using rule 24 (type -> basetype .)
    BAND            reduce using rule 24 (type -> basetype .)
    INT_CONST       reduce using rule 24 (type -> basetype .)
    CHAR_CONST      reduce using rule 24 (type -> basetype .)
    FLOAT_CONST     reduce using rule 24 (type -> basetype .)
    NORMALSTRING    reduce using rule 24 (type -> basetype .)
    TIMES           shift and go to state 35

  ! TIMES           [ reduce using rule 24 (type -> basetype .) ]

    pointer                        shift and go to state 34

state 8

    (25) declaration -> typedecl .

    SEMI            reduce using rule 25 (declaration -> typedecl .)


state 9

    (26) declaration -> arraydecl .

    SEMI            reduce using rule 26 (declaration -> arraydecl .)


state 10

    (27) declaration -> funcdecl .

    SEMI            reduce using rule 27 (declaration -> funcdecl .)


state 11

    (81) basetype -> INT .

    TIMES           reduce using rule 81 (basetype -> INT .)
    ID              reduce using rule 81 (basetype -> INT .)
    BAND            reduce using rule 81 (basetype -> INT .)
    INT_CONST       reduce using rule 81 (basetype -> INT .)
    CHAR_CONST      reduce using rule 81 (basetype -> INT .)
    FLOAT_CONST     reduce using rule 81 (basetype -> INT .)
    NORMALSTRING    reduce using rule 81 (basetype -> INT .)


state 12

    (82) basetype -> CHAR .

    TIMES           reduce using rule 82 (basetype -> CHAR .)
    ID              reduce using rule 82 (basetype -> CHAR .)
    BAND            reduce using rule 82 (basetype -> CHAR .)
    INT_CONST       reduce using rule 82 (basetype -> CHAR .)
    CHAR_CONST      reduce using rule 82 (basetype -> CHAR .)
    FLOAT_CONST     reduce using rule 82 (basetype -> CHAR .)
    NORMALSTRING    reduce using rule 82 (basetype -> CHAR .)


state 13

    (83) basetype -> FLOAT .

    TIMES           reduce using rule 83 (basetype -> FLOAT .)
    ID              reduce using rule 83 (basetype -> FLOAT .)
    BAND            reduce using rule 83 (basetype -> FLOAT .)
    INT_CONST       reduce using rule 83 (basetype -> FLOAT .)
    CHAR_CONST      reduce using rule 83 (basetype -> FLOAT .)
    FLOAT_CONST     reduce using rule 83 (basetype -> FLOAT .)
    NORMALSTRING    reduce using rule 83 (basetype -> FLOAT .)


state 14

    (84) basetype -> VOID .

    TIMES           reduce using rule 84 (basetype -> VOID .)
    ID              reduce using rule 84 (basetype -> VOID .)
    BAND            reduce using rule 84 (basetype -> VOID .)
    INT_CONST       reduce using rule 84 (basetype -> VOID .)
    CHAR_CONST      reduce using rule 84 (basetype -> VOID .)
    FLOAT_CONST     reduce using rule 84 (basetype -> VOID .)
    NORMALSTRING    reduce using rule 84 (basetype -> VOID .)


state 15

    (17) funcdecl -> storage . type methodsymbol LPAREN param_list RPAREN
    (23) type -> . basetype pointer
    (24) type -> . basetype
    (81) basetype -> . INT
    (82) basetype -> . CHAR
    (83) basetype -> . FLOAT
    (84) basetype -> . VOID

    INT             shift and go to state 11
    CHAR            shift and go to state 12
    FLOAT           shift and go to state 13
    VOID            shift and go to state 14

    type                           shift and go to state 36
    basetype                       shift and go to state 7

state 16

    (21) storage -> EXTERN .

    INT             reduce using rule 21 (storage -> EXTERN .)
    CHAR            reduce using rule 21 (storage -> EXTERN .)
    FLOAT           reduce using rule 21 (storage -> EXTERN .)
    VOID            reduce using rule 21 (storage -> EXTERN .)


state 17

    (22) storage -> STATIC .

    INT             reduce using rule 22 (storage -> STATIC .)
    CHAR            reduce using rule 22 (storage -> STATIC .)
    FLOAT           reduce using rule 22 (storage -> STATIC .)
    VOID            reduce using rule 22 (storage -> STATIC .)


state 18

    (2) translation_unit -> translation_unit external_decl .

    INT             reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    CHAR            reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    FLOAT           reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    VOID            reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    EXTERN          reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    STATIC          reduce using rule 2 (translation_unit -> translation_unit external_decl .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_decl .)


state 19

    (76) funcdef -> type methodsymbol . LPAREN param_list RPAREN compound_statement
    (77) funcdef -> type methodsymbol . LPAREN RPAREN compound_statement
    (18) funcdecl -> type methodsymbol . LPAREN param_list RPAREN

    LPAREN          shift and go to state 37


state 20

    (13) typedecl -> type cast_expr .
    (14) typedecl -> type cast_expr . EQUALS expression

    SEMI            reduce using rule 13 (typedecl -> type cast_expr .)
    EQUALS          shift and go to state 38


state 21
